@@ -1,5 +1,6 @@
 package com.org.vetconnect.platform.iam.infrastructure.authorization.sfs.model;
 
+
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.org.vetconnect.platform.iam.domain.model.aggregates.User;
 import lombok.EqualsAndHashCode;
@@ -9,7 +10,6 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Getter
 @EqualsAndHashCode
@@ -24,25 +24,20 @@ public class UserDetailsImpl implements UserDetails {
     private final boolean enabled;
     private final Collection<? extends GrantedAuthority> authorities;
 
-
-    public UserDetailsImpl(String username, String password, Collection<? extends GrantedAuthority> authorities) {
+    public UserDetailsImpl(String username, String password,
+                           Collection<? extends GrantedAuthority> authorities) {
         this.username = username;
         this.password = password;
+        this.authorities = authorities;
         this.accountNonExpired = true;
         this.accountNonLocked = true;
         this.credentialsNonExpired = true;
         this.enabled = true;
-        this.authorities = authorities;
     }
 
     public static UserDetailsImpl build(User user) {
-        var authorities = user.getRoles().stream()
-                .map(role -> role.getName().name())
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
-        return new UserDetailsImpl(
-                user.getUsername(),
-                user.getPassword(),
-                authorities);
+        var authorities = user.getRoles().stream().map(role -> role.getName().name())
+                .map(SimpleGrantedAuthority::new).toList();
+        return new UserDetailsImpl(user.getUsername(), user.getPassword(), authorities);
     }
 }
